finished side nav

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <link rel="stylesheet" href="./styles/home.css" />
   </head>
   <body>
+    <div class="menu-backdrop">
+      <div class="menu">
+        <ul>
+          <li>
+            <button type="button" aria-label="close button" class="closeBtn">
+              <img src="./assets/icon-close.svg" alt="close button" />
+            </button>
+          </li>
+          <li><a class="link header-link" href="./index.html">home</a></li>
+          <li><a class="link header-link" href="./about.html">about</a></li>
+          <li><a class="contact-us header-link" href="./contact.html">contact us</a></li>
+        </ul>
+        <img class="menu-bg-pattern" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
+      </div>
+    </div>
     <div class="container">
       <header class="header">
         <nav class="nav-bar">
@@ -33,5 +48,6 @@
       </header>
       <!-- <main>main content</main> -->
     </div>
+    <script src="./src/index.js"></script>
   </body>
 </html>
