finishing 2nd section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img class="menu-bg-pattern" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
       </div>
     </div>
-    <div class="container">
+    <div class="header-container">
       <header class="header">
         <nav class="nav-bar">
           <img class="logo" src="./assets/logo.svg" alt="logo" />
@@ -44,10 +44,37 @@
           <h1 class="main-heading">Find the<br/ >best <span class="talent">talent</span></h1>
           <p class="desc">Finding the right people and building high performing teams can be hard. Most companies aren't tapping into the abundance of global talent. We're about to change that.</p>
         </div>
-        <div class="bottom-image-container"><img class="pattern-home-2" src="./assets/bg-pattern-home-2.svg" alt="" /></div>
+        <img class="pattern-home-2" src="./assets/bg-pattern-home-2.svg" alt="" />
       </header>
-      <!-- <main>main content</main> -->
     </div>
+    <main class="main-content-container">
+      <section class="teams-info">
+        <h2 class="heading-2">Build & manage distributed teams like no one else.</h2>
+        <div class="teams-data">
+          <figure>
+            <img src="./assets/icon-person.svg" alt="icon-person" />
+            <figcaption>
+              <h3>Experienced Individuals</h3>
+              <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/icon-cog.svg" alt="icon-cog" />
+            <figcaption>
+              <h3>Easy to Implement</h3>
+              <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/icon-chart.svg" alt="icon-chart" />
+            <figcaption>
+              <h3>Enhanced Productivity</h3>
+              <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+    </main>
     <script src="./src/index.js"></script>
   </body>
 </html>
