--- a/index.html
+++ b/index.html
@@ -49,29 +49,32 @@
     </div>
     <main class="main-content-container">
       <section class="teams-info">
-        <h2 class="heading-2">Build & manage distributed teams like no one else.</h2>
-        <div class="teams-data">
-          <figure>
-            <img src="./assets/icon-person.svg" alt="icon-person" />
-            <figcaption>
-              <h3>Experienced Individuals</h3>
-              <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/icon-cog.svg" alt="icon-cog" />
-            <figcaption>
-              <h3>Easy to Implement</h3>
-              <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/icon-chart.svg" alt="icon-chart" />
-            <figcaption>
-              <h3>Enhanced Productivity</h3>
-              <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
-            </figcaption>
-          </figure>
+        <div class="teams-group">
+          <h2 class="heading-2"><span>Build & manage distributed teams like no one else.</span></h2>
+          <div class="teams-data">
+            <figure>
+              <img src="./assets/icon-person.svg" alt="icon-person" />
+              <figcaption>
+                <h3>Experienced Individuals</h3>
+                <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+              </figcaption>
+            </figure>
+            <figure>
+              <img src="./assets/icon-cog.svg" alt="icon-cog" />
+              <figcaption>
+                <h3>Easy to Implement</h3>
+                <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+              </figcaption>
+            </figure>
+            <figure>
+              <img src="./assets/icon-chart.svg" alt="icon-chart" />
+              <figcaption>
+                <h3>Enhanced Productivity</h3>
+                <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+              </figcaption>
+            </figure>
+            <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
+          </div>
         </div>
       </section>
     </main>
