--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <img class="menu-bg-pattern" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
       </div>
     </div>
-    <div class="header-container">
-      <header class="header">
+    <header class="header-container">
+      <div class="header">
         <nav class="nav-bar">
           <img class="logo" src="./assets/logo.svg" alt="logo" />
           <a class="link header-link" href="./index.html">home</a>
@@ -45,8 +45,8 @@
           <p class="desc">Finding the right people and building high performing teams can be hard. Most companies aren't tapping into the abundance of global talent. We're about to change that.</p>
         </div>
         <img class="pattern-home-2" src="./assets/bg-pattern-home-2.svg" alt="" />
-      </header>
-    </div>
+      </div>
+    </header>
     <main class="main-content-container">
       <section class="teams-info">
         <div class="teams-group">
@@ -78,6 +78,42 @@
         </div>
       </section>
     </main>
+    <section class="quotes-container">
+      <div class="quotes">
+        <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
+        <div class="quotes-group">
+          <h2 class="heading-2">Delivering real results for top companies. Some of our <span class="success-stories">success stories.</span></h2>
+          <figure class="figure1">
+            <figcaption>
+              <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+              <q class="quote">The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.</q>
+              <h3 class="heading-3">Kady Baker</h3>
+              <p class="job-position">Product Manager at Bookmark</p>
+            </figcaption>
+            <img src="./assets/avatar-kady.jpg" width="62px" height="62px" alt="kady" />
+          </figure>
+          <figure class="figure2">
+            <figcaption>
+              <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+              <q class="quote">We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!</q>
+              <h3 class="heading-3">Aiysha Reese</h3>
+              <p class="job-position">Founder of Manage</p>
+            </figcaption>
+            <img src="./assets/avatar-aiysha.jpg" width="62px" height="62px" alt="aiysha" />
+          </figure>
+          <figure class="figure3">
+            <figcaption>
+              <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+              <q class="quote">Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.</q>
+              <h3 class="heading-3">Arthur Clarke</h3>
+              <p class="job-position">Co-founder of MyPhysio</p>
+            </figcaption>
+            <img src="./assets/avatar-arthur.jpg" width="62px" height="62px" alt="arthur" />
+          </figure>
+        </div>
+        <img src="./assets/bg-pattern-home-5.svg" alt="" />
+      </div>
+    </section>
     <script src="./src/index.js"></script>
   </body>
 </html>
