added contact block

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
         <img src="./assets/bg-pattern-home-5.svg" alt="" />
       </div>
     </section>
+    <section class="contact-us-container">
+      <div class="contact-us-content">
+        <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
+        <h2 class="heading-2">Ready to get started?</h2>
+        <a class="contact-us header-link" href="./contact.html">contact us</a>
+      </div>
+    </section>
     <script src="./src/index.js"></script>
   </body>
 </html>
