--- a/index.html
+++ b/index.html
@@ -121,6 +121,50 @@
         <a class="contact-us header-link" href="./contact.html">contact us</a>
       </div>
     </section>
+    <footer class="footer-container">
+      <div class="footer-content">
+        <div class="nav-group">
+          <img class="logo" src="./assets/logo.svg" alt="logo" />
+          <nav class="nav-links">
+            <ul>
+              <li><a class="link header-link" href="./index.html">home</a></li>
+              <li><a class="link header-link" href="./about.html">about</a></li>
+            </ul>
+          </nav>
+          <nav class="nav-socials">
+            <ul>
+              <li>
+                <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.pinterest.com" target="_blank"><img src="./assets/icon-pinterest.svg" alt="pinterest" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
+        <div class="contact-block">
+          <nav class="nav-socials">
+            <ul>
+              <li>
+                <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.pinterest.com" target="_blank"><img src="./assets/icon-pinterest.svg" alt="pinterest" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
+              </li>
+            </ul>
+          </nav>
+          <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
+          <p class="copyright">Copyright 2023. All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
     <script src="./src/index.js"></script>
   </body>
 </html>
