--- a/about.html
+++ b/about.html
@@ -1,74 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | myteam website challenge - About</title>
-</head>
-<body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  home
-  about
-
-  contact us
-
-
-
-  About
-
-  We help companies build dynamic teams made up of top global talent. 
-  Using our network of passionate professionals we drive innovation 
-  and deliver incredible outcomes. Talented, diverse teams shape the 
-  best products and experiences. We’ll bring those teams to you.
-
-
-
-  Meet the directors
-
-  “It always amazes me how much talent there is in every corner of the globe.”
-  Nikita Marks
-  Founder & CEO
-
-  “Distributed teams required unique processes. You need to approach work in a new way.”
-  Cristian Duncan
-  Co-founder & COO
-
-  “Technology is at the forefront of enabling distributed teams. That's where we come in.”
-  Cruz Hamer
-  Co-founder & CTO
-
-  “Hiring similar people from similar backgrounds is a surefire way to stunt innovation.”
-  Drake Heaton
-  Business Development Lead
-
-  “Unique perspectives shape unique products, which is what you need to survive these days.”
-  Griffin Wise
-  Lead Marketing
-
-  “Empowered teams create truly amazing products. Set the north star and let them follow it.”
-  Aden Allan
-  Head of Talent
-
-
-
-  Ready to get started?
-
-  contact us
-
-
-
-  home
-  about
-
-  987  Hillcrest Lane
-  Irvine, CA
-  California 92714
-  Call Us : 949-833-7432
-
-  Copyright 2020. All Rights Reserved
-  
-</body>
+    <title>Frontend Mentor | myteam website challenge - About</title>
+    <link rel="stylesheet" href="./styles/about.css" />
+  </head>
+  <body>
+    <div class="menu-backdrop">
+      <div class="menu">
+        <ul>
+          <li>
+            <button type="button" aria-label="close button" class="closeBtn">
+              <img src="./assets/icon-close.svg" alt="close button" />
+            </button>
+          </li>
+          <li><a class="link header-link" href="./index.html">home</a></li>
+          <li><a class="link header-link" href="./about.html">about</a></li>
+          <li><a class="contact-us header-link" href="./contact.html">contact us</a></li>
+        </ul>
+        <img class="menu-bg-pattern" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
+      </div>
+    </div>
+    <header class="header-container">
+      <div class="header">
+        <nav class="nav-bar">
+          <img class="logo" src="./assets/logo.svg" alt="logo" />
+          <a class="link header-link" href="./index.html">home</a>
+          <a class="link header-link" href="./about.html">about</a>
+          <a class="contact-us header-link" href="./contact.html">contact us</a>
+          <button type="button" aria-label="hamburger" class="hamburger">
+            <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap" rel="stylesheet" />
+            <img src="./assets/icon-hamburger.svg" alt="" />
+          </button>
+        </nav>
+        <div class="content">
+          <h1 class="main-heading">About</h1>
+          <p class="desc">
+            We help companies build dynamic teams made up of top global talent. Using our network of passionate professionals we drive innovation and deliver incredible outcomes. Talented, diverse teams shape the best products and experiences. We'll
+            bring those teams to you.
+          </p>
+        </div>
+        <img class="pattern-home-2" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
+      </div>
+    </header>
+    <!-- <main class="main-content-container">
+    <section class="teams-info">
+      <div class="teams-group">
+        <h2 class="heading-2"><span>Build & manage distributed teams like no one else.</span></h2>
+        <div class="teams-data">
+          <figure>
+            <img src="./assets/icon-person.svg" alt="icon-person" />
+            <figcaption>
+              <h3>Experienced Individuals</h3>
+              <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/icon-cog.svg" alt="icon-cog" />
+            <figcaption>
+              <h3>Easy to Implement</h3>
+              <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/icon-chart.svg" alt="icon-chart" />
+            <figcaption>
+              <h3>Enhanced Productivity</h3>
+              <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+            </figcaption>
+          </figure>
+          <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
+        </div>
+      </div>
+    </section>
+  </main>
+  <section class="quotes-container">
+    <div class="quotes">
+      <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
+      <div class="quotes-group">
+        <h2 class="heading-2">Delivering real results for top companies. Some of our <span class="success-stories">success stories.</span></h2>
+        <figure class="figure1">
+          <figcaption>
+            <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+            <q class="quote">The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.</q>
+            <h3 class="heading-3">Kady Baker</h3>
+            <p class="job-position">Product Manager at Bookmark</p>
+          </figcaption>
+          <img src="./assets/avatar-kady.jpg" width="62px" height="62px" alt="kady" />
+        </figure>
+        <figure class="figure2">
+          <figcaption>
+            <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+            <q class="quote">We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!</q>
+            <h3 class="heading-3">Aiysha Reese</h3>
+            <p class="job-position">Founder of Manage</p>
+          </figcaption>
+          <img src="./assets/avatar-aiysha.jpg" width="62px" height="62px" alt="aiysha" />
+        </figure>
+        <figure class="figure3">
+          <figcaption>
+            <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+            <q class="quote">Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.</q>
+            <h3 class="heading-3">Arthur Clarke</h3>
+            <p class="job-position">Co-founder of MyPhysio</p>
+          </figcaption>
+          <img src="./assets/avatar-arthur.jpg" width="62px" height="62px" alt="arthur" />
+        </figure>
+      </div>
+      <img src="./assets/bg-pattern-home-5.svg" alt="" />
+    </div>
+  </section> -->
+    <section class="contact-us-container">
+      <div class="contact-us-content">
+        <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
+        <h2 class="heading-2">Ready to get started?</h2>
+        <a class="contact-us header-link" href="./contact.html">contact us</a>
+      </div>
+    </section>
+    <footer class="footer-container">
+      <div class="footer-content">
+        <div class="nav-group">
+          <img class="logo" src="./assets/logo.svg" alt="logo" />
+          <nav class="nav-links">
+            <ul>
+              <li><a class="link header-link" href="./index.html">home</a></li>
+              <li><a class="link header-link" href="./about.html">about</a></li>
+            </ul>
+          </nav>
+          <nav class="nav-socials">
+            <ul>
+              <li>
+                <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.pinterest.com" target="_blank"><img src="./assets/icon-pinterest.svg" alt="pinterest" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
+        <div class="contact-block">
+          <nav class="nav-socials">
+            <ul>
+              <li>
+                <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.pinterest.com" target="_blank"><img src="./assets/icon-pinterest.svg" alt="pinterest" /></a>
+              </li>
+              <li>
+                <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
+              </li>
+            </ul>
+          </nav>
+          <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
+          <p class="copyright">Copyright 2023. All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
+    <script src="./src/index.js"></script>
+  </body>
 </html>
