--- a/about.html
+++ b/about.html
@@ -27,26 +27,43 @@
     </div>
     <header class="header-container">
       <div class="header">
-        <nav class="nav-bar">
-          <img class="logo" src="./assets/logo.svg" alt="logo" />
-          <a class="link header-link" href="./index.html">home</a>
-          <a class="link header-link" href="./about.html">about</a>
-          <a class="contact-us header-link" href="./contact.html">contact us</a>
-          <button type="button" aria-label="hamburger" class="hamburger">
-            <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap" rel="stylesheet" />
-            <img src="./assets/icon-hamburger.svg" alt="" />
-          </button>
-        </nav>
-        <div class="content">
-          <h1 class="main-heading">About</h1>
-          <p class="desc">
-            We help companies build dynamic teams made up of top global talent. Using our network of passionate professionals we drive innovation and deliver incredible outcomes. Talented, diverse teams shape the best products and experiences. We'll
-            bring those teams to you.
-          </p>
+        <div class="header-content">
+          <nav class="nav-bar">
+            <img class="logo" src="./assets/logo.svg" alt="logo" />
+            <a class="link header-link" href="./index.html">home</a>
+            <a class="link header-link" href="./about.html">about</a>
+            <a class="contact-us header-link" href="./contact.html">contact us</a>
+            <button type="button" aria-label="hamburger" class="hamburger">
+              <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap" rel="stylesheet" />
+              <img src="./assets/icon-hamburger.svg" alt="" />
+            </button>
+          </nav>
+          <div class="content">
+            <h1 class="main-heading">About</h1>
+            <p class="desc">
+              We help companies build dynamic teams made up of top global talent. Using our network of passionate professionals we drive innovation and deliver incredible outcomes. Talented, diverse teams shape the best products and experiences.
+              We'll bring those teams to you.
+            </p>
+          </div>
         </div>
-        <img class="pattern-home-2" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
       </div>
+      <img class="pattern-home-2" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
     </header>
+    <main class="main-content-container">
+      <div class="directors-info">
+        <h2>Meeting the directors</h2>
+        <div class="card">
+          <figure>
+            <img src="./assets/avatar-nikita.jpg" alt="nikita" />
+            <figcaption>
+              <h3>Nikita Marks</h3>
+              <p>Founder & CEO</p>
+            </figcaption>
+          </figure>
+          <button aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+        </div>
+      </div>
+    </main>
     <!-- <main class="main-content-container">
     <section class="teams-info">
       <div class="teams-group">
