--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
     </div>
     <header class="header-container">
+      <img class="pattern-home-1" src="./assets/bg-pattern-home-1.svg" alt="" />
       <div class="header">
         <nav class="nav-bar">
           <img class="logo" src="./assets/logo.svg" alt="logo" />
@@ -39,8 +40,8 @@
             <img src="./assets/icon-hamburger.svg" alt="" />
           </button>
         </nav>
+
         <div class="content">
-          <img class="pattern-home-1" src="./assets/bg-pattern-home-1.svg" alt="" />
           <h1 class="main-heading">Find the<br/ >best <span class="talent">talent</span></h1>
           <p class="desc">Finding the right people and building high performing teams can be hard. Most companies aren't tapping into the abundance of global talent. We're about to change that.</p>
         </div>
@@ -73,14 +74,14 @@
                 <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
               </figcaption>
             </figure>
-            <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
           </div>
         </div>
       </section>
+      <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
     </main>
     <section class="quotes-container">
+      <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
       <div class="quotes">
-        <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
         <div class="quotes-group">
           <h2 class="heading-2">Delivering real results for top companies. Some of our <span class="success-stories">success stories.</span></h2>
           <figure class="figure1">
@@ -111,12 +112,12 @@
             <img src="./assets/avatar-arthur.jpg" width="62px" height="62px" alt="arthur" />
           </figure>
         </div>
-        <img src="./assets/bg-pattern-home-5.svg" alt="" />
       </div>
+      <img src="./assets/bg-pattern-home-5.svg" class="pattern-home-5" alt="" />
     </section>
     <section class="contact-us-container">
+      <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
       <div class="contact-us-content">
-        <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
         <h2 class="heading-2">Ready to get started?</h2>
         <a class="contact-us header-link" href="./contact.html">contact us</a>
       </div>
