--- a/about.html
+++ b/about.html
@@ -50,90 +50,77 @@
       <img class="pattern-home-2" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
     </header>
     <main class="main-content-container">
+      <img class="bg-pattern-2" src="./assets/bg-pattern-about-2-contact-1.svg" alt="" />
       <div class="directors-info">
-        <h2>Meeting the directors</h2>
-        <div class="card">
-          <figure>
-            <img src="./assets/avatar-nikita.jpg" alt="nikita" />
-            <figcaption>
-              <h3>Nikita Marks</h3>
-              <p>Founder & CEO</p>
-            </figcaption>
-          </figure>
-          <button aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+        <h2 class="heading-2">Meet the directors</h2>
+        <div class="cards">
+          <div class="card">
+            <figure>
+              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <figcaption>
+                <h3 class="heading-3">Nikita Marks</h3>
+                <p class="job-position">Founder & CEO</p>
+              </figcaption>
+            </figure>
+            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+          </div>
+          <div class="card">
+            <figure>
+              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <figcaption>
+                <h3 class="heading-3">Nikita Marks</h3>
+                <p class="job-position">Founder & CEO</p>
+              </figcaption>
+            </figure>
+            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+          </div>
+          <div class="card">
+            <figure>
+              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <figcaption>
+                <h3 class="heading-3">Nikita Marks</h3>
+                <p class="job-position">Founder & CEO</p>
+              </figcaption>
+            </figure>
+            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+          </div>
+          <div class="card">
+            <figure>
+              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <figcaption>
+                <h3 class="heading-3">Nikita Marks</h3>
+                <p class="job-position">Founder & CEO</p>
+              </figcaption>
+            </figure>
+            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+          </div>
+          <div class="card">
+            <figure>
+              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <figcaption>
+                <h3 class="heading-3">Nikita Marks</h3>
+                <p class="job-position">Founder & CEO</p>
+              </figcaption>
+            </figure>
+            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+          </div>
+          <div class="card">
+            <figure>
+              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <figcaption>
+                <h3 class="heading-3">Nikita Marks</h3>
+                <p class="job-position">Founder & CEO</p>
+              </figcaption>
+            </figure>
+            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+          </div>
         </div>
       </div>
+      <img class="bg-pattern-3" src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
     </main>
-    <!-- <main class="main-content-container">
-    <section class="teams-info">
-      <div class="teams-group">
-        <h2 class="heading-2"><span>Build & manage distributed teams like no one else.</span></h2>
-        <div class="teams-data">
-          <figure>
-            <img src="./assets/icon-person.svg" alt="icon-person" />
-            <figcaption>
-              <h3>Experienced Individuals</h3>
-              <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/icon-cog.svg" alt="icon-cog" />
-            <figcaption>
-              <h3>Easy to Implement</h3>
-              <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/icon-chart.svg" alt="icon-chart" />
-            <figcaption>
-              <h3>Enhanced Productivity</h3>
-              <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
-            </figcaption>
-          </figure>
-          <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
-        </div>
-      </div>
-    </section>
-  </main>
-  <section class="quotes-container">
-    <div class="quotes">
-      <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
-      <div class="quotes-group">
-        <h2 class="heading-2">Delivering real results for top companies. Some of our <span class="success-stories">success stories.</span></h2>
-        <figure class="figure1">
-          <figcaption>
-            <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
-            <q class="quote">The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.</q>
-            <h3 class="heading-3">Kady Baker</h3>
-            <p class="job-position">Product Manager at Bookmark</p>
-          </figcaption>
-          <img src="./assets/avatar-kady.jpg" width="62px" height="62px" alt="kady" />
-        </figure>
-        <figure class="figure2">
-          <figcaption>
-            <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
-            <q class="quote">We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!</q>
-            <h3 class="heading-3">Aiysha Reese</h3>
-            <p class="job-position">Founder of Manage</p>
-          </figcaption>
-          <img src="./assets/avatar-aiysha.jpg" width="62px" height="62px" alt="aiysha" />
-        </figure>
-        <figure class="figure3">
-          <figcaption>
-            <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
-            <q class="quote">Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.</q>
-            <h3 class="heading-3">Arthur Clarke</h3>
-            <p class="job-position">Co-founder of MyPhysio</p>
-          </figcaption>
-          <img src="./assets/avatar-arthur.jpg" width="62px" height="62px" alt="arthur" />
-        </figure>
-      </div>
-      <img src="./assets/bg-pattern-home-5.svg" alt="" />
-    </div>
-  </section> -->
     <section class="contact-us-container">
+      <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
       <div class="contact-us-content">
-        <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
         <h2 class="heading-2">Ready to get started?</h2>
         <a class="contact-us header-link" href="./contact.html">contact us</a>
       </div>
