--- a/about.html
+++ b/about.html
@@ -66,50 +66,50 @@
           </div>
           <div class="card">
             <figure>
-              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <img width="96px" height="96px" src="./assets/avatar-christian.jpg" alt="nikita" />
               <figcaption>
-                <h3 class="heading-3">Nikita Marks</h3>
-                <p class="job-position">Founder & CEO</p>
+                <h3 class="heading-3">Cristian Duncan</h3>
+                <p class="job-position">Co-founder & COO</p>
               </figcaption>
             </figure>
             <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
             <figure>
-              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <img width="96px" height="96px" src="./assets/avatar-cruz.jpg" alt="nikita" />
               <figcaption>
-                <h3 class="heading-3">Nikita Marks</h3>
-                <p class="job-position">Founder & CEO</p>
+                <h3 class="heading-3">Cruz Hamer</h3>
+                <p class="job-position">Co-founder & CTO</p>
               </figcaption>
             </figure>
             <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
             <figure>
-              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <img width="96px" height="96px" src="./assets/avatar-drake.jpg" alt="nikita" />
               <figcaption>
-                <h3 class="heading-3">Nikita Marks</h3>
-                <p class="job-position">Founder & CEO</p>
+                <h3 class="heading-3">Drake Heaton</h3>
+                <p class="job-position">Business Development Lead</p>
               </figcaption>
             </figure>
             <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
             <figure>
-              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <img width="96px" height="96px" src="./assets/avatar-griffin.jpg" alt="nikita" />
               <figcaption>
-                <h3 class="heading-3">Nikita Marks</h3>
-                <p class="job-position">Founder & CEO</p>
+                <h3 class="heading-3">Griffin Wise</h3>
+                <p class="job-position">Lead Marketing</p>
               </figcaption>
             </figure>
             <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
             <figure>
-              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
+              <img width="96px" height="96px" src="./assets/avatar-aden.jpg" alt="nikita" />
               <figcaption>
-                <h3 class="heading-3">Nikita Marks</h3>
-                <p class="job-position">Founder & CEO</p>
+                <h3 class="heading-3">Aden Allan</h3>
+                <p class="job-position">Head of Talent</p>
               </figcaption>
             </figure>
             <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
